<resources>
    <string name="app_name">TipOut</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="service_question">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="okay_10">Okay (10%)</string>
    <string name="roundup_tip">Roundup tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">Calculate</string>
</resources>